Version 1.0.2. Some minor changes and performance boosts.